--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>GastroBaseApp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>GastroBaseApp-1.0-SNAPSHOT</name>
+    <name>GastroBaseApp</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
