Ya funciona el Servlet del Login

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mycompany</groupId>  <!-- Cambia esto por tu groupId real -->
+            <artifactId>GastroBaseDAO</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
