--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.0.0</version> <!-- compatible con Tomcat 11 -->
             <scope>provided</scope>
         </dependency>
     </dependencies>
